--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,15 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
+      }
+      .total {
+        padding: 10px;
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: whitesmoke;
+        border-radius: 5px;
       }
       .it1,
       .it2 {
@@ -130,6 +138,7 @@
           width: 80%;
           min-height: 60%;
           margin: 0 auto;
+          margin-bottom: 10%;
           background-color: lightgray;
           display: flex;
           flex-direction: row;
@@ -142,23 +151,127 @@
           flex-direction: row;"><img
         width="30%"
         height="100%"
-        src="https://m.media-amazon.com/images/I/612B4JamOKL._SL1500_.jpg"
+        src="./assests/whey.jpg"
         alt="Whey Protein"
       /><div class="description">
-         <h1>Fuel One Whey</h1>
-         <p style="opacity: 0.5; margin-left: 2%;">Muscleblaze inc.</p>
-         <h2 style="font-size: large;">Rs. 4200</h2>
-         <div style="display: flex; flex-direction: column;">
-    <div style="background-color: white; padding: 5px;">
-        <img src="https://spng.pngfind.com/pngs/s/536-5360734_half-star-icon-white-hd-png-download.png" height="50px" width="50px" style="background-color: white;" />
-    </div>
+         <h1>Whey Concentrate</h1>
+         <p style="opacity: 0.5; margin-left: 1%;">Muscleblaze inc.</p>
+         <h2 id="price" style="font-size: large; margin-left: 1%;">Rs. 4200</h2>
+         <div style="display: flex; flex-direction: row; align-items: center;"><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><b style="margin-left: 3%;">4.0</b></div>
+         <div style="display: flex; flex-direction: row;"><p style="font-size: large; margin-top: 4%;">Quantity</p>
+    <select id="numberDropdown" style="margin-left: 2%; margin-top: 4%; height: 20%;">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+    </select>
 </div>
+
+<div style="display: flex; flex-direction: row; align-items: center;">
+    <h1 style="font-size: large; margin-left: 1%;">Total:</h1>
+    <h2 id="total" style="font-size: large; margin-left: 1%;">4200.00</h2>
+</div>
+
 
       </div>
     </div>
-        <div class="it2 m-2">items</div>
+        <div class="it2 m-2" style="display: flex;
+          flex-direction: row;"><img
+        width="30%"
+        height="100%"
+        src="./assests/creatine.png"
+        alt="Whey Protein"
+      /><div class="description">
+         <h1>Creatine creapure</h1>
+         <p style="opacity: 0.5; margin-left: 1%;">Muscleblaze inc.</p>
+         <h2 id="pricecreatine" style="font-size: large; margin-left: 1%;">Rs. 1200</h2>
+         <div style="display: flex; flex-direction: row; align-items: center;"><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><img src="./assests/gold.png" height="7%" width="7%"/><b style="margin-left: 3%;">4.0</b></div>
+         <div style="display: flex; flex-direction: row;"><p style="font-size: large; margin-top: 4%;">Quantity</p>
+    <select id="numberDropdowncreatine" style="margin-left: 2%; margin-top: 4%; height: 20%;">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+    </select>
+</div>
+
+<div style="display: flex; flex-direction: row; align-items: center;">
+    <h1 style="font-size: large; margin-left: 1%;">Total:</h1>
+    <h2 id="totalcreatine" style="font-size: large; margin-left: 1%;">1200.00</h2>
+</div>
+
+
       </div>
-      <div class="total m-2">Total</div>
     </div>
+      </div>
+      <div class="total m-3"><h1>Grand Total</h1>
+        <div style="border-bottom: 2px solid black; width: 80%; display: flex; flex-direction: column; align-items: last baseline; padding-top: 10%; padding-right: 10%;"><p id="grosstotalwhey">4200.00</p><p id="grosstotalcreatine">1200.00</p></div>
+        <div style="border-bottom: 2px solid black; width: 80%; display: flex; flex-direction: column; align-items: last baseline; padding-top: 5%; padding-right: 10%;"><p id="grosstotal">5400.00</p></div>
+        <div style="border-bottom: 2px solid black; width: 80%; display: flex; flex-direction: row; align-items: last baseline; padding-top: 5%; padding-right: 10%;"><p style="margin-left: 42%; margin-right: 2%;">Tax (18%): </p><p id="tax">972.00</p></div>
+         <div style="border-bottom: 2px solid black; width: 80%; display: flex; flex-direction: row; align-items: last baseline; padding-top: 5%; padding-right: 10%;"><p style="margin-left: 40%; margin-right: 2%;">Total pay: </p><p id="totalpay">6372.00</p></div>
+         <button type="button" class="btn btn-secondary" style="margin-top: 20%; width: 80%;">Pay</button>
+
+      </div>
+
+    </div>
+    <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+    <p class="text-center text-muted">© 2024 Creative Shopping, Inc</p>
+  </footer>
+
+
+    <script>
+    const dropdown = document.getElementById("numberDropdown");
+    const dropdowncreatine = document.getElementById("numberDropdowncreatine");
+
+    dropdown.addEventListener("change", function() {
+
+        const quantity = dropdown.value;
+
+        const totalPrice = quantity * 4200;
+
+        document.getElementById("total").textContent = totalPrice.toFixed(2);
+        document.getElementById("grosstotalwhey").textContent = totalPrice.toFixed(2);
+const totalPriceWhey = parseFloat(document.getElementById("total").innerHTML);
+const totalPriceCreatine = parseFloat(document.getElementById("totalcreatine").innerHTML);
+const grossTotal = totalPriceWhey + totalPriceCreatine;
+document.getElementById("grosstotal").textContent = grossTotal.toFixed(2);
+const tax =grossTotal*0.18;
+document.getElementById("tax").textContent = tax.toFixed(2);
+const totalpay =grossTotal+tax;
+document.getElementById("totalpay").textContent = totalpay.toFixed(2);
+
+
+    });
+
+    dropdowncreatine.addEventListener("change", function() {
+
+        const quantity = dropdowncreatine.value;
+
+        const totalPrice = quantity * 1200;
+
+        document.getElementById("totalcreatine").textContent = totalPrice.toFixed(2);
+        document.getElementById("grosstotalcreatine").textContent = totalPrice.toFixed(2);
+
+        const totalPriceWhey = parseFloat(document.getElementById("total").innerHTML);
+const totalPriceCreatine = parseFloat(document.getElementById("totalcreatine").innerHTML);
+const grossTotal = totalPriceWhey + totalPriceCreatine;
+document.getElementById("grosstotal").textContent = grossTotal.toFixed(2);
+
+const tax =grossTotal*0.18;
+document.getElementById("tax").textContent = tax.toFixed(2);
+    });
+</script>
+
   </body>
 </html>
